# petljakdb

./: .gitignore  LICENSE  README.md  petljakdb.bash
api/: README.md  pyproject.toml
api/src/petljakapi/: __init__.py  cellline.py  connection.py  dbs.py  inserts.py  select.py  translate.py  update.py
data_imports/gambaro2021/: SraRunTable.txt  gambaro_meta.txt  import_data.py
dumps/: daily.sql
schema/: build.sql
scripts/: db_dump.bash  petljakdb.bash  petljakdb_test.bash
