[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petljakapi"
version = "0.0.1"
authors = [
  { name="Luka Culibrk", email="luka.culibrk@nyulangone.org" },
]
description = "API For interacting with the Petljaklab Database at NYU Langone"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "mysql-connector-python"
  ]

[project.urls]
Homepage = "https://github.com/lculibrk/petljakdb"
Issues = "https://github.com/lculibrk/petljakdb/issues"
